Bug 257704 - KPackageKit crash
Summary: KPackageKit crash
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Steven M. Parrish
URL:
Keywords:
: 258558 263236 265353 268745 269479 272907 280889 293416 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-23 15:18 UTC by Jean-Philippe Dionne
Modified: 2012-02-06 04:48 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (2.38 KB, text/plain)
2011-06-14 18:13 UTC, nemanja
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Philippe Dionne 2010-11-23 15:18:11 UTC
Application: kpackagekit (0.6.2)
KDE Platform Version: 4.5.3 (KDE 4.5.3) (Compiled from sources)
Qt Version: 4.7.0
Operating System: Linux 2.6.35.6-48.fc14.x86_64 x86_64
Distribution: "Fedora release 14 (Laughlin)"

-- Information about the crash:
- What I was doing when the application crashed:

Only clicked the "You have 1 update" Icon in the system tray.

-- Backtrace:
Application: KPackageKit (kpackagekit), signal: Floating point exception
[KCrash Handler]
#6  0x0000003ecc4b2b48 in KPixmapSequenceOverlayPainter::Private::_k_timeout (this=0x222ec50) at /usr/src/debug/kdelibs-4.5.3/kdeui/util/kpixmapsequenceoverlaypainter.cpp:63
#7  0x0000003ecc4b316d in KPixmapSequenceOverlayPainter::qt_metacall (this=0x2064370, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff1b346650) at /usr/src/debug/kdelibs-4.5.3/x86_64-redhat-linux-gnu/kdeui/kpixmapsequenceoverlaypainter.moc:94
#8  0x0000003ecab7002f in QMetaObject::activate (sender=0x222ec80, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3272
#9  0x0000003ecab6f859 in QObject::event (this=0x222ec80, e=<value optimized out>) at kernel/qobject.cpp:1175
#10 0x0000003ecefb4b64 in QApplicationPrivate::notify_helper (this=0x1f32af0, receiver=0x222ec80, e=0x7fff1b346da0) at kernel/qapplication.cpp:4396
#11 0x0000003ecefb95da in QApplication::notify (this=<value optimized out>, receiver=0x222ec80, e=0x7fff1b346da0) at kernel/qapplication.cpp:4277
#12 0x0000003ecc420446 in KApplication::notify (this=0x7fff1b3470d0, receiver=0x222ec80, event=0x7fff1b346da0) at /usr/src/debug/kdelibs-4.5.3/kdeui/kernel/kapplication.cpp:310
#13 0x0000003ecab5b7ac in QCoreApplication::notifyInternal (this=0x7fff1b3470d0, receiver=0x222ec80, event=0x7fff1b346da0) at kernel/qcoreapplication.cpp:732
#14 0x0000003ecab893d2 in sendEvent (this=0x1f366b0) at kernel/qcoreapplication.h:215
#15 QTimerInfoList::activateTimers (this=0x1f366b0) at kernel/qeventdispatcher_unix.cpp:602
#16 0x0000003ecab861c4 in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:184
#17 0x0000003ec1641e33 in g_main_dispatch (context=0x1f35900) at gmain.c:2149
#18 g_main_context_dispatch (context=0x1f35900) at gmain.c:2702
#19 0x0000003ec1642610 in g_main_context_iterate (context=0x1f35900, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2780
#20 0x0000003ec16428ad in g_main_context_iteration (context=0x1f35900, may_block=1) at gmain.c:2843
#21 0x0000003ecab868af in QEventDispatcherGlib::processEvents (this=0x1f0ace0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#22 0x0000003ecf0586ee in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#23 0x0000003ecab5ab42 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#24 0x0000003ecab5ad8c in QEventLoop::exec (this=0x7fff1b347020, flags=...) at kernel/qeventloop.cpp:201
#25 0x0000003ecab5f20b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#26 0x0000000000411005 in _start ()

Reported using DrKonqi
Comment 1 Daniel Nicoletti 2010-11-23 16:21:11 UTC
Can you reproduce it every time?
From the backtrace I can tell it's a kdelibs bug on KPixmapSequenceOverlayPainter, if you can reproduce I reassign the bug.

thanks.
Comment 2 Christoph Feck 2011-03-18 00:03:32 UTC
*** Bug 258558 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2011-03-18 00:03:56 UTC
*** Bug 263236 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2011-03-18 00:04:19 UTC
*** Bug 265353 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2011-03-18 00:04:56 UTC
*** Bug 268745 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2011-03-18 00:12:55 UTC
Git commit dc52c863b677ea7e32dfa2bf51bc3d4b79ca8e33 by Christoph Feck.
Committed on 18/03/2011 at 00:09.
Pushed by cfeck into branch 'master'.

Fix crash in KPixmapSequenceOverlayPainter

The class tries to ensure that a default sequence is available.
There is, however, no check if the default sequence is part of
the current icon theme. This fix makes sure the class does not
crash when the default icon sequence fails to load.

BUG: 257704
FIXED-IN: 4.7.0

M  +6    -0    kdeui/util/kpixmapsequenceoverlaypainter.cpp     

http://commits.kde.org/kdelibs/dc52c863b677ea7e32dfa2bf51bc3d4b79ca8e33
Comment 7 Christoph Feck 2011-04-01 13:30:39 UTC
*** Bug 269479 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2011-05-11 22:05:36 UTC
*** Bug 272907 has been marked as a duplicate of this bug. ***
Comment 9 nemanja 2011-06-14 18:13:55 UTC
Created attachment 60991 [details]
New crash information added by DrKonqi

kpackagekit (0.6.3.3) on KDE Platform 4.6.2 (4.6.2) using Qt 4.7.2

- What I was doing when the application crashed:
Every time I start the update application from kde panel (taskbar) it crashes showing the crash reporting assistant. My distribution is ubuntu  11.04 updated from ubuntu 10.10

-- Backtrace (Reduced):
#6  0x00007f679f0a38d8 in KPixmapSequenceOverlayPainter::Private::_k_timeout() () from /usr/lib/libkdeui.so.5
#7  0x00007f679f0a3efd in KPixmapSequenceOverlayPainter::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeui.so.5
[...]
#9  0x00007f679df7e1c9 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#10 0x00007f679c8739e4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#11 0x00007f679c8783aa in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
Comment 10 Christoph Feck 2011-10-17 19:39:40 UTC
*** Bug 280889 has been marked as a duplicate of this bug. ***
Comment 11 Jekyll Wu 2012-02-06 04:48:41 UTC
*** Bug 293416 has been marked as a duplicate of this bug. ***