Fix crash in KPixmapSequenceOverlayPainter

The class tries to ensure that a default sequence is available.
There is, however, no check if the default sequence is part of
the current icon theme. This fix makes sure the class does not
crash when the default icon sequence fails to load.

BUG: 257704
FIXED-IN: 4.7.0